--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "require-dev": {
     "codeception/codeception": "^2.4",
     "codeception/mockery-module": "^0.2",
-    "mikey179/vfsStream": "^1.6",
+    "mikey179/vfsstream": "^1.6",
     "spryker/code-sniffer": "^0.12",
     "phpro/grumphp": "^0.14",
     "sebastian/phpcpd": "^4.0",
