--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
   ],
   "require": {
     "php": ">=7.1",
-    "spryker/catalog": "^5.0.0"
+    "spryker/search-elasticsearch:": "^1.0.0",
+    "spryker/search-extension": "^1.0.0"
   },
   "require-dev": {
     "codeception/codeception": "^2.4",
